--- a/docker-compose-poa.yml
+++ b/docker-compose-poa.yml
@@ -4,10 +4,12 @@ services:
      image: darknightcoder/eth-poa:latest
      environment:
        - EXTERNAL_ALLOCS=0x9d8393dd96eeb9c9bca5c84e186d8b5eca96f595
-       - ALLOC_WEI=0xC08DE6FCB28B80000
-       - ACCOUNTS_TO_CREATE=10  
+       - ALLOC_WEI=4C485837A2FB712D800000
+       - ACCOUNTS_TO_CREATE=5  
      networks: 
        - tesseract-1
+     volumes:
+             - "./extra-accounts.json:/cliquebait/extra-accounts.json"      
   
 networks:
   tesseract-1:
