--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,11 @@ services:
   oem-ui:
     image: darknightcoder/tess-oem-ui:latest
     ports:
-      - "3002:80"
+      - "4001:80"
   user-ui: 
     image: darknightcoder/tess-user-ui:latest
     ports:
-      - "80:80"       
+      - "4002:80"       
   mongo:
     image: mongo:3.2-jessie
     ports:
@@ -15,23 +15,20 @@ services:
     networks: 
       - tesseract
   geth-service:
-     image: darknightocoder/eth-poa:latest
+     image: darknightcoder/eth-poa:latest
      ports: 
        - "8545:8545"
      environment:
        - EXTERNAL_ALLOCS=0x9d8393dd96eeb9c9bca5c84e186d8b5eca96f595
        - ALLOC_WEI=4C485837A2FB712D800000
        - ACCOUNTS_TO_CREATE=5
-
      networks: 
        - tesseract
   contract-deployer:
      image: darknightcoder/tess-contract-deployer:latest
+     command: bash -c "sleep 10s && node contractSetup.js"
      networks: 
-      - tesseract
-     depends_on:
-      - mongo
-      - geth-service     
+      - tesseract     
   car-service:
     image: darknightcoder/tess-cs:latest
     ports: 
@@ -46,9 +43,9 @@ services:
       - tesseract
   main-service: 
     image: darknightcoder/tess-main:latest-1
-    command: forever /main-service/server.js
     ports: 
       - "80:8081"
+    command: bash -c "while ping -c1 contract-deployer &>/dev/null do sleep 1; done; echo "Contract deployer service finished!" && forever /main-service/server.js"
     networks: 
       - tesseract            
  
